build, fix: remove dependencies on core library

--- a/cmake/GPUIConfig.cmake.in
+++ b/cmake/GPUIConfig.cmake.in
@@ -9,6 +9,6 @@ set(GPUI_LIBRARY_DIR @CMAKE_INSTALL_PREFIX@/lib)
 # set GPUI_LIBRARY variables
 set(GPUI_GUI_LIBRARY gpui-gui)
 set(GPUI_IO_LIBRARY gpui-io)
-set(GPUI_MODEL_LIBRARY gpui-model)
+set(GPUI_CORE_LIBRARY gpui-core)
 
-set(GPUI_LIBRARIES ${GPUI_GUI_LIBRARY} ${GPUI_IO_LIBRARY} ${GPUI_MODEL_LIBRARY})
+set(GPUI_LIBRARIES ${GPUI_GUI_LIBRARY} ${GPUI_IO_LIBRARY} ${GPUI_CORE_LIBRARY})
