--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ compile_commands.json
 # Build directory
 build/
 docs/
+
+# Generated files
+src/plugins/preferences/schemas/*.cpp
+src/plugins/preferences/schemas/*.h
