feat: implement translation in preferences snap-in

--- a/src/plugins/preferences/CMakeLists.txt
+++ b/src/plugins/preferences/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package(Qt5 COMPONENTS Widgets Qml LinguistTools REQUIRED)
+
 find_package(GPUI COMPONENTS core io REQUIRED)
 
 find_package(MVVM REQUIRED)
@@ -452,6 +454,16 @@ set(PLUGIN_SOURCES
     preferencestreeproxymodel.cpp
 )
 
+file(GLOB_RECURSE TS_FILES ${CMAKE_CURRENT_SOURCE_DIR} *.ts)
+
+set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_translation(QM_FILES ${TS_FILES})
+
+add_translation_resource(RESOURCES_SRC ${QM_FILES})
+
+qt5_add_resources(LIB_RESOURCES ${RESOURCES_SRC} ${ICON_RESOURCES})
+
 set(PLUGIN_SOURCES ${PLUGIN_SOURCES} ${PLUGIN_HEADERS})
 
 set(SOURCES ${SOURCES} ${HEADERS} ${UI_FORMS})
@@ -468,6 +480,5 @@ target_link_libraries(preferences_static ${MVVM_LIBRARIES})
 target_link_libraries(preferences_static static_xsd_library)
 target_link_libraries(preferences_static xerces-c)
 
-add_gpui_plugin(${PLUGIN_NAME} ${PLUGIN_SOURCES})
+add_gpui_plugin(${PLUGIN_NAME} ${PLUGIN_SOURCES} ${LIB_RESOURCES})
 target_link_libraries(${PLUGIN_NAME} preferences_static)
-
