fix: remove dependency on administrative_templates snap-in

--- a/src/plugins/adml/CMakeLists.txt
+++ b/src/plugins/adml/CMakeLists.txt
@@ -5,15 +5,17 @@ find_package(Qt5 COMPONENTS Core REQUIRED)
 
 set(HEADERS
     admlformat.h
+    ../administrative_templates/presentation/presentationwidget.h
 )
 
 set(SOURCES
     admlformat.cpp
     admlplugin.cpp
+    ../administrative_templates/presentation/presentationwidget.cpp
 )
 
 add_gpui_plugin(adml-plugin ${SOURCES})
 target_link_libraries(adml-plugin Qt5::Core)
 target_link_libraries(adml-plugin ${GPUI_LIBRARIES} policy-common)
 target_link_libraries(adml-plugin xerces-c)
-target_link_libraries(adml-plugin administrative-templates-plugin)
+target_link_libraries(adml-plugin)
