--- a/cmake/GPUIConfig.cmake.in
+++ b/cmake/GPUIConfig.cmake.in
@@ -10,5 +10,6 @@ set(GPUI_LIBRARY_DIR @CMAKE_INSTALL_PREFIX@/lib)
 set(GPUI_GUI_LIBRARY gpui-gui)
 set(GPUI_IO_LIBRARY gpui-io)
 set(GPUI_MODEL_LIBRARY gpui-model)
+set(GPUI_LDAP_LIBRARY gpui-ldap)
 
-set(GPUI_LIBRARIES ${GPUI_GUI_LIBRARY} ${GPUI_IO_LIBRARY} ${GPUI_MODEL_LIBRARY})
+set(GPUI_LIBRARIES ${GPUI_GUI_LIBRARY} ${GPUI_IO_LIBRARY} ${GPUI_MODEL_LIBRARY} ${GPUI_LDAP_LIBRARY})
