feat: implement translation for administrative templates

--- a/src/plugins/administrative_templates/CMakeLists.txt
+++ b/src/plugins/administrative_templates/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Qt5 COMPONENTS Core REQUIRED)
+find_package(Qt5 COMPONENTS Core LinguistTools REQUIRED)
 
 find_package(MVVM REQUIRED)
 
@@ -92,7 +92,20 @@ add_definitions(
     -DGPUI_ADMINISTRATIVE_TEMPLATES_PLUGIN
 )
 
-add_gpui_plugin(${PLUGIN_NAME} ${SOURCES})
+set(TS_FILES
+    ui/i18n/common_translation_en.ts
+    ui/i18n/common_translation_ru.ts
+)
+
+set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION ${CMAKE_CURRENT_SOURCE_DIR})
+
+qt5_add_translation(QM_FILES ${TS_FILES})
+
+add_translation_resource(RESOURCES_SRC ${QM_FILES})
+
+qt5_add_resources(LIB_RESOURCES ${RESOURCES_SRC} ${ICON_RESOURCES})
+
+add_gpui_plugin(${PLUGIN_NAME} ${SOURCES} ${LIB_RESOURCES})
 target_link_libraries(${PLUGIN_NAME} Qt5::Core)
 target_link_libraries(${PLUGIN_NAME} ${GPUI_CORE_LIBRARY} ${GPUI_IO_LIBRARY})
 target_link_libraries(${PLUGIN_NAME} smb-storage-static)
