feat: implement boolean delegate

--- a/src/plugins/preferences/CMakeLists.txt
+++ b/src/plugins/preferences/CMakeLists.txt
@@ -26,6 +26,7 @@ set(HEADERS
     common/preferencesdialog.h
     common/preferencesmodel.h
     common/propertieswidget.h
+    common/propertieswidgetdelegate.h
     common/tabledetailswidget.h
     common/widgetfactory.h
 
@@ -204,6 +205,7 @@ set(SOURCES
     common/preferencesdialog.cpp
     common/preferencesmodel.cpp
     common/propertieswidget.cpp
+    common/propertieswidgetdelegate.cpp
     common/tabledetailswidget.cpp
     common/widgetfactory.cpp
 
