--- a/src/plugins/preferences/CMakeLists.txt
+++ b/src/plugins/preferences/CMakeLists.txt
@@ -22,6 +22,7 @@ set(HEADERS
     common/commonitem.h
     common/commonutils.h
     common/commonview.h
+    common/defaultactions.h
     common/preferencecategoryitem.h
     common/preferencesdialog.h
     common/preferencesmodel.h
@@ -201,6 +202,7 @@ set(SOURCES
     common/commonitem.cpp
     common/commonutils.cpp
     common/commonview.cpp
+    common/defaultactions.cpp
     common/preferencecategoryitem.cpp
     common/preferencesdialog.cpp
     common/preferencesmodel.cpp
