--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -25,5 +25,6 @@ add_subdirectory(ini)
 add_subdirectory(pol)
 add_subdirectory(preferences)
 add_subdirectory(reg)
+add_subdirectory(scripts)
 add_subdirectory(spol)
 add_subdirectory(storage)
