chore: add translation

--- a/src/plugins/scripts/CMakeLists.txt
+++ b/src/plugins/scripts/CMakeLists.txt
@@ -58,23 +58,22 @@ set(UIFORMS
     addscriptwidget.ui
 )
 
+include_directories(${CMAKE_SOURCE_DIR}/src)
+
+set(PLUGIN_NAME scripts-plugin)
+
 file(GLOB_RECURSE TS_FILES ${CMAKE_CURRENT_SOURCE_DIR} *.ts)
 
-set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION ${CMAKE_CURRENT_SOURCE_DIR})
+#set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_translation(QM_FILES ${TS_FILES})
+add_translation(QM_FILES "${TS_FILES}")
 
-add_translation_resource(RESOURCES_SRC ${QM_FILES})
+add_translation_resource(RESOURCES_SRC "${QM_FILES}")
 
 qt5_add_resources(LIB_RESOURCES ${RESOURCES_SRC})
 
 set(SOURCES ${SOURCES} ${HEADERS} ${UIFORMS})
 
-include_directories(${CMAKE_SOURCE_DIR}/src)
-
-set(PLUGIN_NAME scripts-plugin)
-
-#add_library(scripts-plugin STATIC ${SOURCES})
 add_gpui_plugin(${PLUGIN_NAME} ${SOURCES} ${LIB_RESOURCES})
 target_link_libraries(${PLUGIN_NAME} Qt5::Core Qt5::Widgets)
 target_link_libraries(${PLUGIN_NAME} ${GPUI_LIBRARIES})
