--- a/src/plugins/administrative_templates/CMakeLists.txt
+++ b/src/plugins/administrative_templates/CMakeLists.txt
@@ -2,7 +2,7 @@ find_package(Qt5 COMPONENTS Core LinguistTools REQUIRED)
 
 find_package(MVVM REQUIRED)
 
-find_package(GPUI COMPONENTS core io REQUIRED)
+find_package(GPUI COMPONENTS core io gui REQUIRED)
 include_directories(${PREFERENCES_EDITOR_INCLUDE_DIRS})
 
 set(PLUGIN_NAME administrative-templates-plugin)
