--- a/src/plugins/administrative_templates/CMakeLists.txt
+++ b/src/plugins/administrative_templates/CMakeLists.txt
@@ -101,7 +101,7 @@ set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION ${CMAKE_CURRE
 
 qt5_add_translation(QM_FILES ${TS_FILES})
 
-add_translation_resource(RESOURCES_SRC ${QM_FILES})
+add_translation_resource(RESOURCES_SRC "administrative" ${QM_FILES})
 
 qt5_add_resources(LIB_RESOURCES ${RESOURCES_SRC} ${ICON_RESOURCES})
 
