--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory(gui)
-add_subdirectory(io)
-add_subdirectory(model)
-add_subdirectory(plugins)
+#add_subdirectory(gui)
+#add_subdirectory(io)
+#add_subdirectory(model)
+#add_subdirectory(plugins)
+add_subdirectory(core)
