--- a/tests/auto/io/policyfile/CMakeLists.txt
+++ b/tests/auto/io/policyfile/CMakeLists.txt
@@ -1,4 +1,4 @@
 qt5_wrap_cpp(MOC_SOURCES policyfiletest.h)
 add_executable(policyfiletest policyfiletest.cpp ${MOC_SOURCES})
-target_link_libraries(policyfiletest gpui-model gpui-io Qt5::Core Qt5::Test)
+target_link_libraries(policyfiletest gpui-io Qt5::Core Qt5::Test)
 add_gpui_test(io.policyfiletest policyfiletest)
