--- a/tests/auto/model/policybundle/CMakeLists.txt
+++ b/tests/auto/model/policybundle/CMakeLists.txt
@@ -1,4 +1,4 @@
 qt5_wrap_cpp(MOC_SOURCES policybundletest.h)
 add_executable(policybundletest policybundletest.cpp ${MOC_SOURCES})
-target_link_libraries(policybundletest gpui-model Qt5::Core Qt5::Test)
+target_link_libraries(policybundletest Qt5::Core Qt5::Test)
 add_gpui_test(model.policybundletest policybundletest)
