--- a/tests/auto/plugins/CMakeLists.txt
+++ b/tests/auto/plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(GPUI COMPONENTS io model REQUIRED)
+find_package(GPUI COMPONENTS core io REQUIRED)
 include_directories(${GPUI_INCLUDE_DIRS})
 
 find_package(Qt5 COMPONENTS Core Test REQUIRED)
