--- a/tests/auto/gui/presentationbuilder/CMakeLists.txt
+++ b/tests/auto/gui/presentationbuilder/CMakeLists.txt
@@ -1,5 +1,5 @@
 qt5_wrap_cpp(MOC_SOURCES presentationbuildertest.h)
 
-add_executable(presentationbuilder presentationbuildertest.cpp ${MOC_SOURCES})
-target_link_libraries(presentationbuilder administrative-templates-plugin gpui-gui Qt5::Core Qt5::Gui Qt5::Test)
+add_executable(presentationbuildertest presentationbuildertest.cpp ${MOC_SOURCES})
+target_link_libraries(presentationbuildertest administrative-templates-plugin gpui-gui Qt5::Core Qt5::Gui Qt5::Test)
 add_gpui_test(gui.presentationbuilder presentationbuildertest)
