--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,20 +10,27 @@ jobs:
       matrix:
         alt-version: [ { dist: "alt:sisyphus", artifact: "sisyphus" } ]
         architecture: [ amd64 ]
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - run: docker build . --file Dockerfile --tag build-environment --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) --build-arg DISTR=${{ matrix.alt-version.dist }} --build-arg ARCH=${{ matrix.architecture  }}
-
-      - if: ${{ matrix.architecture == 'i386' }}
-        run: docker run --privileged=true -i --log-driver=none -a stdin -a stdout -a stderr -v "$(pwd)":/app build-environment --platform linux/i386
-
-      - if: ${{ matrix.architecture == 'amd64' }}
-        run: docker run --privileged=true -i --log-driver=none -a stdin -a stdout -a stderr -v "$(pwd)":/app build-environment
-
-      - uses: actions/upload-artifact@v3
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Cache Docker layers
+        uses: actions/cache@v2
         with:
-          name: gpui-${{ matrix.alt-version.artifact }}-${{ matrix.architecture }}
-          path: /home/builder2/RPM/RPMS/x86_64/
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+       - name: Build and push
+         uses: docker/build-push-action@v2
+         with:
+           context: .
+           push: false
+           tags: mchernigin/gpui:latest
+           cache-from: type=local,src=/tmp/.buildx-cache
+           cache-to: type=local,dest=/tmp/.buildx-cache-new
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
