--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -32,11 +32,11 @@ jobs:
         apt-get update &&
         apt-get install -y boost-devel-headers cmake cmake-modules desktop-file-utils doxygen gcc-c++ glib2-devel \
         ImageMagick-tools libkrb5-devel libldap-devel libpcre-devel libqt-mvvm-devel libsasl2-devel libsmbclient \
-        libsmbclient-devel libuuid-devel libxerces-c-devel ninja-build qt5-base-common qt5-base-devel \
-        qt5-declarative-devel qt5-tools-devel rpm-macros-cmake samba-devel xorg-xvfb xsd xvfb-run
+        libsmbclient-devel libuuid-devel libxerces-c-devel make qt5-base-common qt5-base-devel qt5-declarative-devel \
+        qt5-tools-devel rpm-macros-cmake samba-devel xorg-xvfb xsd xvfb-run
 
     - name: Configure cmake
-      run:  cmake -G Ninja -B build .
+      run:  cmake -B build .
 
     - name: Build
       run:  cmake --build ./build
