--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: GPUI CI
 
-on: [ push, pull_request ]
+on: [ push ]
 
 jobs:
   build:
@@ -30,6 +30,11 @@ jobs:
           tags: mchernigin/gpui:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
+          build-args: |
+            DISTR=${{ matrix.alt-version.dist }}
+            ARCH=${{ matrix.architecture }}
+            USER_ID=$(id -u)
+            GROUP_ID=$(id -g)
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
