--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,30 +12,19 @@ jobs:
         architecture: [ amd64 ]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
-          tags: mchernigin/gpui:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: |
             DISTR=${{ matrix.alt-version.dist }}
             ARCH=${{ matrix.architecture }}
             USER_ID=$(id -u)
             GROUP_ID=$(id -g)
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
