--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push
+      - name: Build
         uses: docker/build-push-action@v2
         with:
-          context: .
+          tags: gpui-test:latest
+          push: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
@@ -28,3 +29,8 @@ jobs:
             ARCH=${{ matrix.architecture }}
             USER_ID=1001
             GROUP_ID=121
+
+      - name: Run image
+        uses: addnab/docker-run-action@v3
+        with:
+          image: gpui-test:latest
