--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.github_token }}
+          logout: false
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Build
         uses: docker/build-push-action@v2
         with:
-          tags: gpui-test:latest
-          push: false
+          tags: ghcr.io/${{ github.repository }}:${{ github.run_number }}
+          push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
@@ -29,8 +37,3 @@ jobs:
             ARCH=${{ matrix.architecture }}
             USER_ID=1001
             GROUP_ID=121
-
-      - name: Run image
-        uses: addnab/docker-run-action@v3
-        with:
-          image: gpui-test:latest
